# farmOps

./: .dockerignore  .env.dev  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.dev.yml  docker-compose.prod.yml  sample.py  wrangler.toml
backend/: .dockerignore  .gitignore  pyproject.toml
backend/src/: main.py
backend/src/api/: __init__.py
backend/src/api/routes/: farm.py  irrigation.py  recommendations.py  schemes.py
backend/src/db/: supabase_client.py
backend/src/middleware/: error_handler.py  rate_limiter.py
backend/src/models/: __init__.py  base.py  data_audit_log.py  farm.py  farm_snapshot.py  location_profile.py  market_snapshot.py  recommendation.py  soil_profile.py  user.py  veg_timeseries.py  weather_snapshot.py
backend/src/services/ai/: __init__.py  llm_agent.py  mistral_client.py  setup_tools.py  tool_executor.py  tool_registry.py
backend/src/services/ai_tools/: analyze_farm_image.py  estimate_production_cost.py  estimate_profit.py  estimate_risk_score.py  estimate_yield.py  get_location_profile.py  get_market_prices.py  get_ndvi_timeseries.py  get_soil_profile.py  get_weather_forecast.py  search_government_schemes.py  search_web_market_prices.py
backend/src/services/audit/: __init__.py  audit_logger.py
backend/src/services/location/: __init__.py  location_service.py  soil_service.py
backend/src/utils/: geospatial.py
backend/tests/api/: test_irrigation.py  test_recommendations.py  test_snapshot.py
backend/tests/integration/: test_crop_recommender.py  test_irrigation_scheduler.py
backend/tests/unit/: test_estimate_profit.py  test_estimate_risk_score.py  test_estimate_yield.py  test_soil_moisture.py
frontend/: .dockerignore  (+9 more)
(+108 files in other folders)
